﻿
29/3/2016:
* REFACT: UnitTest solution configuration is no more: now unit testing is triggered via command line argument "--unit-test"
* REFACT: logger class does not support profile channel anymore, and now has a custom_debug method logging in blue and with its own threshold; header must always be specified though
* REFACT: Log thresholds and related stuff has been polished and are more consistent: test methods are assigned to the debug threshold, uni and resolve channels too; test_weak_ok and
          test_fail although are treated as unleveled and are subject to no threshold
* BUG: flex type annotation management must be fixed


26/3/2016:
* UP: solution has now new configurations: Interactive Debug and Release; Interpreter Debug and Release; plus UnitTest
* UP: UnitTest revamped: sections as well as entries support flags for controlling environments and other details 


25/3/2016:
* NEW: attempt to writen a simpler non-monadic type equivalence algorithm, but I'm not persuaded it would be better so it's now in the TODO list
* REFACT: pattern and constructor factories for sugars have been polished


24/3/2016:
* REFACT: another file refactor: certains stuff in Ops have been put into new Subst and Equivalence modules
* FIX: type equality now is more robust and all relevant unit tests are successful
* BUG: unit tests using previous bindings throw an unbound error (dunno why!)


23/3/2016:
* REFACT: big refactor of former Absyn module: now it is split into several files within a source folder
* REFACT: another big source layout refactor involving UnitTest
* FIX: Intrinsic.envs0.δ environment was not forwarded to the initial state of the monad and led to unbound tyep constructors in type evaluation
* UP: a few very minor TODOs implemented and others cleaned up
* FIX: type equivalence fixed: T_App case was inverting comparison between arguments (damn!!)